# Heeler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml  security.yml
config/: heeler.example.toml
crates/heeler-core/: Cargo.toml
crates/heeler-core/src/: clock.rs  error.rs  lib.rs  packet.rs  response.rs  timestamp.rs  validation.rs
crates/heeler-core/tests/: property.rs
crates/heeler-server/: Cargo.toml
crates/heeler-server/src/: access.rs  bench.rs  client.rs  config.rs  inspect.rs  lib.rs  main.rs  metrics.rs  privilege.rs  rate_limit.rs  server.rs  shutdown.rs
crates/heeler-server/tests/: compatibility.rs  concurrency.rs  malformed_packets.rs  protocol.rs
crates/heeler-server/tests/common/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_packet.rs
packaging/debian/: README.md  control  heeler.postinst
packaging/docker/: Dockerfile  heeler.toml
packaging/systemd/: heeler.service
scripts/: release.sh  test.sh
