[workspace]
resolver = "2"
members = ["crates/heeler-core", "crates/heeler-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/jusso-dev/Heeler"
authors = ["Heeler contributors"]

[workspace.dependencies]
heeler-core = { path = "crates/heeler-core", version = "0.1.0" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "time",
    "signal",
    "macros",
    "sync",
    "io-util",
] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
socket2 = "0.5"
ipnet = { version = "2", features = ["serde"] }
libc = "0.2"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
