[package]
name = "heeler-core"
description = "Wire protocol, timestamp, and clock-source primitives for the Heeler NTP server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
